JastAddExtensions/Refactoring/tests/eclipse/IntroduceParameter/invalid/NoExpression1.java
//selection: 7, 14, 7, 19
package invalid;

class Foo {
    public static final int CONST= 3;
	public int getImage(Object obj) {
        return Foo.CONST;
	}
}